Fixed bug where dropdown items in FilterControl were behind info button of product cards

--- a/less/_components/product-list/_filterControl.less
+++ b/less/_components/product-list/_filterControl.less
@@ -83,7 +83,7 @@
         @font-desktop-body-quatt();
         padding: @sizes-small-2 @sizes-small-3;
         box-shadow: @effect-shadow-button-orange-default-0;
-        z-index: 2;
+        z-index: 3;
       }
 
       li {
